tests/build/cases/ui_node/invalid_delegate_pair.stderr
error: expected `, delegate_mut = <expr>`
 --> cases/ui_node/invalid_delegate_pair.rs:9:28
  |
9 | #[ui_node(delegate = &self.inner)]
  |                            ^^^^^

error: expected `, delegate = <expr>`
  --> cases/ui_node/invalid_delegate_pair.rs:15:36
   |
15 | #[ui_node(delegate_mut = &mut self.inner)]
   |                                    ^^^^^

warning: unused import: `UiNode`
 --> cases/ui_node/invalid_delegate_pair.rs:3:34
  |
3 |     widget_instance::{NilUiNode, UiNode},
  |                                  ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
